kubernetes/kube-lego/kube-lego-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kube-lego
  namespace: polykube
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kube-lego
    spec:
      containers:
      - name: kube-lego
        image: jetstack/kube-lego:0.0.2
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
