kubernetes/kube-lego/kube-lego-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-lego
  namespace: polykube
  annotations:
    ingress-nginx.kubernetes.io/ssl-redirect: "false"
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: kube-lego
