kubernetes/kube-lego/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: polykube
spec:
  type: LoadBalancer
  ports:
  - port: 80
    name: http
  - port: 443
    name: https
  selector:
    app: nginx
